# IRNCHAT

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/irnchat/: cli.py  core.py  crypto.py  gui_tk.py  identity.py  io.py  session.py  ui_server.py
src/irnchat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/irnchat/transports/: bluetooth.py  link.py  wifi.py
