[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irnchat"
version = "0.1.0"
description = "Local-only E2EE chat over Wi-Fi (LAN) with a Bluetooth transport stub."
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42.0.0",
  "fastapi>=0.110.0",
  "websockets>=12.0",
  "rich>=13.7.1",
  "uvicorn>=0.30.0",
]

[project.scripts]
irnchat = "irnchat.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
